--- a/products/templates/products/shop.html
+++ b/products/templates/products/shop.html
@@ -41,9 +41,12 @@
 
         <div class="col-sm-6 col-md-6 col-lg-3 col-xxl-3 pt-2 pb-2">
             <div class="card text-bg-dark ratio-4x3">
-                <a href="{% url 'all_products'%}?category={{category.name}}"><img
+                <div>
+                    <a href="{% url 'all_products'%}?category={{category.name}}"><img
                         class="img-thumbnail shop-tile rounded-3" src="{{ MEDIA_URL }}{{category.image }}"
-                        alt="{{category.name}} image"></a>
+                        alt="{{category.name}} image">
+                    </a>
+                </div>
                 <div class="tile-overlay">
                     <div class="tile-title p-2">
                         <a class="blue-hover" href="{% url 'all_products'%}?category={{category.name}}">
