--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,7 +56,7 @@ td {
 }
 
 .tile-image{
-    /* height:100%; */
+    height:100%;
     min-width: 100%;
     overflow:hidden;
     object-fit: cover;
